--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion" title="Simba Marara">
+    <img src="https://files.worldwildlife.org/wwfcmsprod/images/African_Elephant_Kenya_112367/hero_full/6tzzuw246j_WW187785.jpg" alt="elephant" title="The Great Jumbo">
+    <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/10CE3/production/_111753886_najin_fencedoff_gettyimages-1163345273.jpg" alt="white rhino" title="The Great White Rhino"> 
   </body>
 </html>
